# aliyun-pds-cpp-sdk

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  README_zh.md
sample/: CMakeLists.txt
sample/src/: Config.cc  Config.h  Program.cc
sample/src/dir/: DirSample.cc  DirSample.h
sample/src/file/: FileSample.cc  FileSample.h
sample/src/resumable/: ResumableSample.cc  ResumableSample.h
sample/src/sharelink/: ShareLinkSample.cc  ShareLinkSample.h
sample/src/utils/: FileOperationUtils.cc  FileOperationUtils.h  MyCredentialsProvider.cc  MyCredentialsProvider.h  MyRefreshCredentialsProvider.cc  MyRefreshCredentialsProvider.h  ResumableCallBack.cc  ResumableCallBack.h
sdk/: CMakeLists.txt
sdk/src/: Config.h.in  PdsClient.cc  PdsClientImpl.cc  PdsClientImpl.h  PdsRequest.cc  PdsResponse.cc  PdsResult.cc  ServiceRequest.cc
sdk/src/auth/: Credentials.cc  CredentialsProvider.cc  SimpleCredentialsProvider.cc  SimpleCredentialsProvider.h
sdk/src/client/: AsyncCallerContext.cc  Client.cc  Client.h  ClientConfiguration.cc
sdk/src/http/: CurlHttpClient.cc  CurlHttpClient.h  HttpClient.cc  HttpMessage.cc  HttpRequest.cc  HttpResponse.cc  Url.cc
sdk/src/model/: AsyncTaskGetRequest.cc  AsyncTaskGetResult.cc  DataGetByUrlRequest.cc  DataGetResult.cc  DataPutByUrlRequest.cc  DataPutResult.cc  DirCopyRequest.cc  DirCopyResult.cc  DirCreateRequest.cc  DirCreateResult.cc  DirDeleteRequest.cc  DirDeleteResult.cc  DirHiddenRequest.cc  DirHiddenResult.cc  DirListRequest.cc  DirListResult.cc  DirMoveRequest.cc  DirMoveResult.cc  DirRenameRequest.cc  DirRenameResult.cc  DirSearchRequest.cc  DirSearchResult.cc  DirTrashRequest.cc  DirTrashResult.cc  FileCompleteRequest.cc  FileCompleteResult.cc  (+40 more)
(+123 files in other folders)
